--- a/less/style.less
+++ b/less/style.less
@@ -59,7 +59,7 @@ a.icon-alone {
 }
 
 header {
-  background: @red;
+  background: #fff;
   // fixed position
   display: block;
   position: fixed;
@@ -91,6 +91,12 @@ header {
         &:hover {
           border: none;
         }
+      }
+      h1 {
+        background: url(images/logo.jpg) center center no-repeat;
+        background-size: 300px;
+        height: 200px;
+        text-indent: -99999em;
       }
     }
   }
