--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@ layout: default
 
     <!-- stylesheet -->
     <link rel='stylesheet' href='assets.css' type='text/css'>
+    <link rel='stylesheet' href='style.css' type='text/css'> 
     <meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=no'>
 </head>
 <body>
