--- a/style.css
+++ b/style.css
@@ -1,6 +1,20 @@
+header {
+  background: #fff;
+}
+
+header div {
+  padding: 0;
+}
+
 header h1 {
   background: url(images/logo.jpg) center center no-repeat;
   background-size: 280px;
-  height: 200px;
+  height: 120px;
   text-indent: -99999em;
 }
+
+header div nav a:hover,
+header div nav a:active {
+  color: #6a6a6a;
+}
+
