--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@ layout: default
     <meta name='description' content='JIN-entertainment'>
     <meta name='author' content='Aimee'>
     
-    <title>by aimeesohn - {{page.title}}</title>
+    <title>JIN-entertainment | Targeted celebrity marketing</title>
 
     <!-- stylesheet -->
     <link rel='stylesheet' href='assets.css' type='text/css'>
