--- a/style.css
+++ b/style.css
@@ -44,8 +44,7 @@ header div nav a:active {
 }
 
 #insights section p img {
-  width: 100%;
-  height: auto;
+  height: 100%;
 }
 
 #insights section div#description {
