--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ header div nav a:active {
 #insights section h3 {
   text-shadow: 0 1px 0 rgba(255,255,255,.1);
 }
+
 #insights section p {
   width: 600px;
   height: 400px;
@@ -49,7 +50,6 @@ header div nav a:active {
 
 #insights section div#description {
   display: block;
-  max-height: 110px;
   background: rgba(0,0,0,.05);
   overflow: hidden;
   white-space: normal;
@@ -59,6 +59,7 @@ header div nav a:active {
 
 #insights section div#description p {
   margin: 0;
-  width: 580px;
+  width: 800px;
   height: auto;
+  text-align: left;
 }
