--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,27 +5,27 @@
   </p>
   <ul>
     <li>
-      <a href='' class='icon-alone' id='google'>
-        <span aria-hidden='true' data-icon='g'></span>
+      <a href='' class='icon-alone' id='linkedin'>
+        <span aria-hidden='true' data-icon='l'></span>
         <span class='screen-reader-text'>Linkedin</span>
       </a>
     </li>
     <li>
-      <a href='' class='icon-alone' id='weibo'>
+      <a href='http://www.weibo.com/u/1819778384?wvr=5&' class='icon-alone' id='weibo'>
         <span aria-hidden='true' data-icon='w'></span>
         <span class='screen-reader-text'>Weibo</span>
       </a>
     </li>
     <li>
-      <a href='' class='icon-alone' id='twitter'>
-        <span aria-hidden='true' data-icon='t'></span>
-        <span class='screen-reader-text'>Twitter</span>
+      <a href='http://www.facebook.com/xin.jin.988?ref=tn_tnmn' class='icon-alone' id='facebook'>
+        <span aria-hidden='true' data-icon='f'></span>
+        <span class='screen-reader-text'>Facebook</span>
       </a>
     </li>
     <li>
-      <a href='' class='icon-alone' id='facebook'>
-        <span aria-hidden='true' data-icon='f'></span>
-        <span class='screen-reader-text'>Facebook</span>
+      <a href='http://pinterest.com/yirza/boards/' class='icon-alone' id='pinterest'>
+        <span aria-hidden='true' data-icon='p'></span>
+        <span class='screen-reader-text'>Pinterest</span>
       </a>
     </li>
   </ul>
