--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,10 +9,11 @@ layout: default
     <meta name='description' content='JIN-entertainment'>
     <meta name='author' content='Aimee'>
     
-    <title>by aimeesohn - {{page.title}}</title>
+    <title>JIN-entertainment | Targeted Celebrity Marketing</title>
 
     <!-- stylesheet -->
     <link rel='stylesheet' href='assets.css' type='text/css'>
+    <link rel='stylesheet' href='font.css' type='text/css'>
     <link rel='stylesheet' href='style.css' type='text/css'>
     <meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=no'>
 </head>
