--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,9 @@ layout: default
     <meta name='author' content='Aimee'>
     
     <title>JIN-entertainment | Targeted Celebrity Marketing</title>
-
+	
     <!-- stylesheet -->
+    <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Open+Sans'>
     <link rel='stylesheet' href='assets.css' type='text/css'>
     <link rel='stylesheet' href='font.css' type='text/css'>
     <link rel='stylesheet' href='style.css' type='text/css'>
