--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
-  font-family: helvetica;
+/*  font: 16px/160% 'Open Sans', Arial, sans-serif;*/
+  font-family: 'Open Sans';
 }
 
 header {
