--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,19 +11,19 @@
       </a>
     </li>
     <li>
-      <a href='http://www.weibo.com/u/1819778384?wvr=5&' class='icon-alone' id='weibo'>
+      <a href='http://www.weibo.com/u/1819778384?wvr=5&' target='_blank' class='icon-alone' id='weibo'>
         <span aria-hidden='true' data-icon='w'></span>
         <span class='screen-reader-text'>Weibo</span>
       </a>
     </li>
     <li>
-      <a href='http://www.facebook.com/xin.jin.988?ref=tn_tnmn' class='icon-alone' id='facebook'>
+      <a href='http://www.facebook.com/xin.jin.988?ref=tn_tnmn' target='_blank' class='icon-alone' id='facebook'>
         <span aria-hidden='true' data-icon='f'></span>
         <span class='screen-reader-text'>Facebook</span>
       </a>
     </li>
     <li>
-      <a href='http://pinterest.com/yirza/boards/' class='icon-alone' id='pinterest'>
+      <a href='http://pinterest.com/yirza/boards/' target='_blank' class='icon-alone' id='pinterest'>
         <span aria-hidden='true' data-icon='p'></span>
         <span class='screen-reader-text'>Pinterest</span>
       </a>
