--- a/style.css
+++ b/style.css
@@ -72,12 +72,12 @@ header div nav a:active {
   text-align: left;
 }
 
-#insights section div#description p > a {
+#insights section div#description a {
   color: #628b3d;
   text-decoration: none;
 }
 
-#insights section div#description p a:hover {
+#insights section div#description a:hover {
   color: #000;
   text-decoration: underline;
 }
