--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ header h1 {
 
 header div nav a:hover,
 header div nav a:active {
-  color: #556bef;
+  color: #556b2f;
 }
 
 .wrapper {
@@ -31,9 +31,15 @@ header div nav a:active {
   content: none;
 }
 
+#whoweare,
 #insights {
   background: url(images/noisy-texture.png) repeat;
 }
+
+#whatwedo {
+  background: none;
+}
+
 #insights section {
   display: inline-block;
   margin: 30px 20px;
@@ -54,7 +60,7 @@ header div nav a:active {
 }
 
 #insights section p img {
-  width: 150px;
+  width: 200px;
 }
 
 #insights section div#description {
@@ -75,7 +81,7 @@ header div nav a:active {
 }
 
 #insights section div#description a {
-  color: #556bef;
+  color: #556b2f;
   text-decoration: none;
 }
 
