--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,8 +37,12 @@ layout: default
   
   var slider =
     Swipe(document.getElementById('slider'), {
-      auto: 4000,
-      continuous: true,
+	  startSlide: 2,
+	  speed: 400,
+	  auto: 3000,
+	  continuous: true,
+	  disableScroll: false,
+	  stopPropagation: true,
       callback: function(pos) {
   
         var i = bullets.length;
