--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,26 +35,24 @@ layout: default
   <script type='text/javascript' src='js/swipe.js'></script>
   <script>
   
-  var slider =
-    Swipe(document.getElementById('slider'), {
-	  startSlide: 2,
-	  speed: 400,
-	  auto: 3000,
-	  continuous: true,
-	  disableScroll: false,
-	  stopPropagation: true,
-      callback: function(pos) {
-  
-        var i = bullets.length;
-        while (i--) {
-          bullets[i].className = ' ';
+    $('#projects .project').hide();
+    $('#projects .project:first').show();
+    
+    window.mySwipe = new Swipe(document.getElementById('slider'), {
+        startSlide: 2,
+        speed: 400,
+        auto: 3000,
+        continuous: true,
+        disableScroll: false,
+        stopPropagation: true,
+        callback: function(pos, index, elem) {
+            // Add the effect to slide the project description
+            var description = $('#projects .project:first');
+            description.hide();
+            description.next().fadeIn('slow');
+            $('#projects').append(description);
         }
-        bullets[pos].className = 'on';
-  
-      }
     });
-  
-  var bullets = document.getElementById('position').getElementsByTagName('li');
 
 </script>
 </body>
