--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@ header div nav a:active {
   color: #556b2f;
 }
 
+header.fixed {
+  position: fixed;
+}
+
 .wrapper {
   padding-top: 120px;
 }
@@ -131,7 +135,7 @@ section#whatwedo section div {
 }
 
 .swipe {
-  margin-top: 40px;
+  margin-top: 20px;
   overflow: hidden;
   visibility: hidden;
   position: relative;
