--- a/style.css
+++ b/style.css
@@ -55,11 +55,12 @@ section#whatwedo section div {
   background: none;
   opacity: 0.5;
   padding: 0;
-  width: 200px;
+  width: 800px;
   border-radius: 0;
 }
 
 #insights section h3 {
+  font-weight: 500;
   text-align: left;
   text-shadow: 0 1px 0 rgba(255,255,255,.1);
 }
