--- a/style.css
+++ b/style.css
@@ -55,14 +55,30 @@ section#whatwedo section div {
   background: none;
   opacity: 0.5;
   padding: 0;
-  width: 800px;
   border-radius: 0;
+  position: relative;
+  float: right;
+  display: inline-block;
+  width: 600px;
+}
+
+section#whatwedo section div p {
+  position: relative;
+  top: 0;
+  width: auto;
+  left: 0;
+  margin: 0;
 }
 
 #insights section h3 {
   font-weight: 500;
   text-align: left;
   text-shadow: 0 1px 0 rgba(255,255,255,.1);
+  width: 100px;
+  display: inline-block;
+  position: relative;
+  float: left;
+  margin-top: 0;
 }
 
 #insights section p {
