--- a/style.css
+++ b/style.css
@@ -62,6 +62,12 @@ section#whatwedo section div p {
   width: auto;
   left: 0;
   margin: 0;
+  font-size: 17px;
+  padding: 0 5px;
+  margin-bottom: 10px;
+  text-align: left;
+  color: #000;
+  opacity: 1;
 }
 
 section#whatwedo section h3 {
