--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ section#whatwedo section div {
   float: right;
   display: inline-block;
   width: 600px;
+  height: 100px;
 }
 
 section#whatwedo section div p {
@@ -76,6 +77,8 @@ section#whatwedo section h3 {
   position: relative;
   float: left;
   margin-top: 0;
+  text-align: left;
+  height: 100px;
 }
 
 
