--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@ layout: default
     <meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=no'>
 </head>
 <body>
-  <header>
+  <header id='header'>
     <div>
       {% include header.html %}
     </div>
