--- a/style.css
+++ b/style.css
@@ -193,7 +193,7 @@ section#whatwedo section div:nth-child(2) {
   text-transform: lowercase;
 }
 
-#footer #email:hover {
+#footer #email:hover a {
   color: #556b2f;
 }
 
