--- a/style.css
+++ b/style.css
@@ -199,7 +199,7 @@ section#whatwedo section div:nth-child(2) {
 }
 
 #footer #email:hover a {
-  color: #556b2f;
+  color: #9bcd9b;
 }
 
 footer ul li a:hover#linkedin, 
