--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ section#whatwedo section div p::after {
   background: none;
 }
 
-#whatwedo .containter {
+#whatwedo .container {
   height: 500px;
 }
 
