--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ section#whatwedo section div p {
   font-size: 17px;
   padding: 0 5px;
   margin-bottom: 10px;
-  text-align: left;
+  text-align: right;
   color: #000;
   opacity: 1;
 }
