--- a/style.css
+++ b/style.css
@@ -77,13 +77,14 @@ section#whatwedo section div {
   margin: none;
   background: none;
   opacity: 0.5;
-  padding: 0;
   border-radius: 0;
   position: relative;
-  float: right;
   display: inline-block;
   width: 600px;
   height: 100px;
+  background: rgba(0, 0, 0, .1);
+  padding: 15px;
+  border-radius: 3px;
 }
 
 section#whatwedo section div p {
@@ -107,7 +108,6 @@ section#whatwedo section h3 {
   float: left;
   margin-top: 0;
   text-align: left;
-  height: 100px;
 }
 
 section#whatwedo section div:nth-child(2) {
